style improvements forumn widths

--- a/ui/index.html
+++ b/ui/index.html
@@ -191,109 +191,109 @@
                     <div class="fish">People / Organization
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                     </div>
                     <div class="fish">Process / Workflow
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                     </div>
                     <div class="fish">Tools / Systems
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                     </div>
                     <div class="fish">Environment / Context
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                     </div>
                     <div class="fish">Policy / Management
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                     </div>
                     <div class="fish">Mother Nature / Place
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                         <div class="fish-row">
                             <input type="checkbox" class="crit">
-                            <input>
+                            <input placeholder=" ">
                         </div>
                     </div>
                 </div>
