style improvements forumn widths

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,13 @@
 
                 <div class="muted">No evidence uploaded yet.</div>
             </div>
-            <div class="footer">Status updates automatically when any D1–D8 field is edited.</div>
+            <div class="footer">Status updates automatically when any D1–D8 field is edited.
+                this can be a bvery long footer text to test wrapping behavior.
+                andd we need to ensure it is readyb
+                adfasdfasdf 
+                adfasdfasdfdasfasdf
+                
+            </div>
         </div>
 
         <!-- D1–D2 PROBLEM INITIATION -->
