UI: create case, list & download evidence (Sprint 2)

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,7 @@
 
                 <button data-action="upload-evidence" disabled>Upload Evidence</button>
 
-                <div class="muted">No evidence uploaded yet.</div>
+                <div id="evidence-list" class="muted">No evidence uploaded yet.</div>
             </div>
             <div class="footer">Status updates automatically when any D1–D8 field is edited.
             </div>
